Added bulletin section; added utf-8 coding info

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -5,6 +5,8 @@
    "id": "5e2e1533-d15c-4b1a-b9aa-31a1d0966858",
    "metadata": {},
    "source": [
+    "<!-- -*- coding: utf-8 -*- -->\n",
+    "\n",
     "OmniCentraj Specifoj  \n",
     "OmniCentro Specifications\n",
     "===============================================================================\n",
@@ -33,6 +35,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17d01e66-8a13-4a67-a0da-f40fcd7ad849",
+   "metadata": {},
+   "source": [
+    "Detalaj Informoj  \n",
+    "Detailed Information\n",
+    "-------------------------------------------------------------------------------\n",
+    "\n",
+    "-------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90e9cef7-e12a-47f2-9973-f788ac5527c0",
+   "metadata": {},
+   "source": [
+    "### Bulletin\n",
+    "\n",
+    "-------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "#### Summary\n",
+    "\n",
+    "|                 |  Acronym | Name |\n",
+    "| --------------- | :------: | ---- |\n",
+    "| Background      |      | (fictional) Planned New Capital |\n",
+    "| City Name       | OC   | OmniCentro |\n",
+    "| Country Name    | RdO  | Regno de Omnijo |\n",
+    "| Government Name | OCR  | Omnija Centra Registaro |\n",
+    "| Local Authority | OCG  | OmniCentra    Gvidado   |\n",
+    "| Country Leader  |      | Reĝino Serena de Omnijo |\n",
+    "| City Designers  |      | Ĉuĉjo  kaj  Ĝejnjo |\n",
+    "\n",
+    "#### Government Structure (Part)\n",
+    "\n",
+    "| Departments                  |  Acronym | Name |\n",
+    "| ---------------------------- | :------: | ---- |\n",
+    "| Department of Defence        | OCFD | OmniCentra Fako de Defendo |\n",
+    "| Department of Education      | OCFE | OmniCentra Fako de Edukado kaj Inteligenteco |\n",
+    "| Department of Fire and Rescue| OCFF | OmniCentra Fako de Fajro kaj Savo |\n",
+    "| Department of Infrastructure | OCFI | OmniCentra Fako de Infrastrukturo kaj Evoluo |\n",
+    "| Department of Police         | OCFP | OmniCentra Fako de Polico |\n",
+    "| Department of Health         | OCFS | OmniCentra Fako de Sano |\n",
+    "\n",
+    "| Offices                      |  Acronym | Name |\n",
+    "| ---------------------------- | :------: | ---- |\n",
+    "| Office of Finance            | OCOF | OmniCentra Oficejo de Fisko |\n",
+    "| Office of Foreign Affairs    | OCOE | OmniCentra Oficejo de Eksteraj Aferoj |\n",
+    "| Office of Home    Affairs    | OCOI | OmniCentra Oficejo de Internaj Aferoj |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e28de884-9660-424a-9a68-6d93ea4a5ee9",
    "metadata": {},
    "source": [
@@ -56,6 +110,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "11a54cd6-0c6d-45a8-973d-61479ee7b67a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1428.5714285714287"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2000 / 1.4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "07c1b53a-120e-4065-9324-b14fc63e822f",
    "metadata": {},
@@ -67,14 +142,17 @@
     "\n",
     "#### Brushes Configuration\n",
     "\n",
-    "- Brush N/A: Altitude  600m to 1100m\n",
+    "- Brush W-D: Altitude  100m to  600m\n",
     "  - Briches\n",
-    "- Brush   1: Altitude 1100m to 1400m\n",
+    "  - etc.\n",
+    "- Brush   2: Altitude  600m to 1000m\n",
     "  - Briches\n",
     "  - Pines\n",
-    "- Brush N/A: Altitude 1400m to 2000m\n",
+    "- Brush   1: Altitude 1000m to 1400m\n",
+    "  - Briches\n",
     "  - Pines\n",
-    "- Brush E-G: Altitude 2000m to 3500m\n",
+    "  - Spruces\n",
+    "- Brush E-G: Altitude 1400m to 2500m\n",
     "  - Pines\n",
     "  - Spruces\n",
     "\n",
@@ -140,6 +218,8 @@
    "id": "4a3b4a4a-a6b1-4c2b-8b85-bea8688f7caf",
    "metadata": {},
    "source": [
+    "<!-- -*- coding: utf-8 -*- -->\n",
+    "\n",
     "Project Omnijo\n",
     "===============================================================================\n",
     "\n",
