Updated Tree brushes info; put the background stories section to the end of the document.

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -87,18 +87,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e28de884-9660-424a-9a68-6d93ea4a5ee9",
-   "metadata": {},
-   "source": [
-    "Fonaj Rakontoj  \n",
-    "Background Stories\n",
-    "-------------------------------------------------------------------------------\n",
-    "\n",
-    "-------------------------------------------------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "14c83ee8-5152-4496-b1af-24aaef74b68f",
    "metadata": {},
    "source": [
@@ -107,27 +95,6 @@
     "-------------------------------------------------------------------------------\n",
     "\n",
     "-------------------------------------------------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "11a54cd6-0c6d-45a8-973d-61479ee7b67a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1428.5714285714287"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2000 / 1.4"
    ]
   },
   {
@@ -155,6 +122,8 @@
     "- Brush E-G: Altitude 1400m to 2500m\n",
     "  - Pines\n",
     "  - Spruces\n",
+    "- Brush N/A: Very steep terrain\n",
+    "  - Spruces\n",
     "\n",
     "\n",
     "#### Species\n",
@@ -176,6 +145,18 @@
     "#### See Also\n",
     "\n",
     "- https://en.wikipedia.org/wiki/Tree_line#Tree_species_near_tree_line\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e28de884-9660-424a-9a68-6d93ea4a5ee9",
+   "metadata": {},
+   "source": [
+    "Fonaj Rakontoj  \n",
+    "Background Stories\n",
+    "-------------------------------------------------------------------------------\n",
+    "\n",
+    "-------------------------------------------------------------------------------"
    ]
   },
   {
