--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -57,32 +57,37 @@
     "\n",
     "#### Summary\n",
     "\n",
-    "|                 |  Acronym | Name |\n",
-    "| --------------- | :------: | ---- |\n",
-    "| Background      |      | (fictional) Planned New Capital |\n",
-    "| City Name       | OC   | OmniCentro |\n",
-    "| Country Name    | RdO  | Regno de Omnijo |\n",
-    "| Government Name | OCR  | Omnija Centra Registaro |\n",
-    "| Local Authority | OCG  | OmniCentra    Gvidado   |\n",
-    "| Country Leader  |      | Reĝino Serena de Omnijo |\n",
-    "| City Designers  |      | Ĉuĉjo  kaj  Ĝejnjo |\n",
+    "| Summary           |  Acronym | Name                |\n",
+    "| :---------------- | :------: | :-----------------: |\n",
+    "| City Name         | OC   | OmniCentro              |\n",
+    "| Country Name      | RdO  | Regno de Omnijo         |\n",
+    "| Government Name   | OCR  | Omnija Centra Registaro |\n",
+    "| Local Authority   | OCG  | OmniCentra    Gvidado   |\n",
+    "\n",
+    "| Background        | Name |\n",
+    "| :---------------- | ---- |\n",
+    "| City Background   | [fictional] Planned New Capital |\n",
+    "| Official Language | Esperanto (transitioning from English in the next 20 years) |\n",
+    "| Country Leader    | Reĝino Serena de Omnijo |\n",
+    "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suvereno |\n",
+    "\n",
     "\n",
     "#### Government Structure (Part)\n",
     "\n",
     "| Departments                  |  Acronym | Name |\n",
     "| ---------------------------- | :------: | ---- |\n",
     "| Department of Defence        | OCFD | OmniCentra Fako de Defendo |\n",
-    "| Department of Education      | OCFE | OmniCentra Fako de Edukado kaj Inteligenteco |\n",
+    "| Department of Education      | OCFE | OmniCentra Fako de Edukado |\n",
     "| Department of Fire and Rescue| OCFF | OmniCentra Fako de Fajro kaj Savo |\n",
-    "| Department of Infrastructure | OCFI | OmniCentra Fako de Infrastrukturo kaj Evoluo |\n",
-    "| Department of Police         | OCFP | OmniCentra Fako de Polico |\n",
-    "| Department of Health         | OCFS | OmniCentra Fako de Sano |\n",
+    "| Department of Infrastructure | OCFI | OmniCentra Fako de Infrastrukturo |\n",
+    "| Department of Police         | OCFP | OmniCentra Fako de Polico  |\n",
+    "| Department of Health         | OCFS | OmniCentra Fako de Sano    |\n",
     "\n",
     "| Offices                      |  Acronym | Name |\n",
     "| ---------------------------- | :------: | ---- |\n",
-    "| Office of Finance            | OCOF | OmniCentra Oficejo de Fisko |\n",
-    "| Office of Foreign Affairs    | OCOE | OmniCentra Oficejo de Eksteraj Aferoj |\n",
-    "| Office of Home    Affairs    | OCOI | OmniCentra Oficejo de Internaj Aferoj |"
+    "| Office of Finance            | OCOF | Omnija Centra Oficejo de Fisko |\n",
+    "| Office of Foreign Affairs    | OCOE | Omnija Centra Oficejo de Eksteraj Aferoj |\n",
+    "| Office of Home    Affairs    | OCOI | Omnija Centra Oficejo de Internaj Aferoj |"
    ]
   },
   {
