Set license (CC BY-NC-SA 4.0)

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -30,6 +30,9 @@
     "Any resemblance to actual persons, living or dead, or actual events\n",
     "is purely coincidental.\n",
     "\n",
+    "This work © 2024 by \\_HomeOnMars\\_ is licensed under CC BY-NC-SA 4.0.\n",
+    "To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-sa/4.0/\n",
+    "\n",
     "-------------------------------------------------------------------------------"
    ]
   },
@@ -224,6 +227,9 @@
     "or used in a fictitious manner.\n",
     "Any resemblance to actual persons, living or dead, or actual events\n",
     "is purely coincidental.\n",
+    "\n",
+    "This work © 2024 by \\_HomeOnMars\\_ is licensed under CC BY-NC-SA 4.0.\n",
+    "To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-sa/4.0/\n",
     "\n",
     "-------------------------------------------------------------------------------"
    ]
