Update Bulletin section (stress its fictional nature)

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -60,16 +60,18 @@
     "\n",
     "#### Summary\n",
     "\n",
-    "| Summary           |  Acronym | Name                |\n",
+    "(Again, everything here is fictional.)\n",
+    "\n",
+    "| Settings          |  Acronym | Name                |\n",
     "| :---------------- | :------: | :-----------------: |\n",
     "| City Name         | OC   | OmniCentro              |\n",
     "| Country Name      | RdO  | Regno de Omnijo         |\n",
     "| Government Name   | OCR  | Omnija Centra Registaro |\n",
     "| Local Authority   | OCG  | OmniCentra    Gvidado   |\n",
     "\n",
-    "| Background        | Name |\n",
+    "| [Fictional] Background | Name |\n",
     "| :---------------- | ---- |\n",
-    "| City Background   | [fictional] Planned New Capital |\n",
+    "| City Background   | Planned New Capital |\n",
     "| Official Language | Esperanto (transitioning from English in the next 20 years) |\n",
     "| Country Leader    | Reĝino Serena de Omnijo |\n",
     "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suvereno |\n",
