Adding additional single letter abbr details

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -92,7 +92,22 @@
     "| ---------------------------- | :------: | ---- |\n",
     "| Office of Finance            | OCOF | Omnija Centra Oficejo de Fisko |\n",
     "| Office of Foreign Affairs    | OCOE | Omnija Centra Oficejo de Eksteraj Aferoj |\n",
-    "| Office of Home    Affairs    | OCOI | Omnija Centra Oficejo de Internaj Aferoj |"
+    "| Office of Home    Affairs    | OCOI | Omnija Centra Oficejo de Internaj Aferoj |\n",
+    "\n",
+    "\n",
+    "#### Single letter abbreviations\n",
+    "\n",
+    "| Acronym | Esperanto     | English  |\n",
+    "| :-----: | ------------- | -------- |\n",
+    "|    N    | **N**orda     | Northern |\n",
+    "|    S    | **S**uda      | Southern |\n",
+    "|    R    | o**R**ienta   | Eastern  |\n",
+    "|    K    | o**K**cidenta | Western  |\n",
+    "|    L    | **L**iva      | Left     |\n",
+    "|    C    | **C**entra    | Center   |\n",
+    "|    D    | **D**ekstra   | Right    |\n",
+    "|    P    | **P**lus / Maldekstruma / S->N / K->R | Plus / Counterclockwise / S->N / W->E |\n",
+    "|    M    | **M**inus / Dekstruma / N->S / R->K   | Minus /       Clockwise / N->S / E->W |\n"
    ]
   },
   {
@@ -184,6 +199,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    },
+    {
      "data": {
       "text/latex": [
        "$3505.2 \\; \\mathrm{m}$"
@@ -235,6 +257,78 @@
     "\n",
     "-------------------------------------------------------------------------------"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4613b0b-1e41-4a42-9664-bf8f6b894ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56e26cb-8228-47f4-8498-67e1e7a2bd64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3462b37-1ac9-4c1b-a159-4814d46c59dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae65327e-7357-4516-a04f-440e52b9b952",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de8b0227-83c8-4d61-a157-9ee04924117f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51577ad-babf-4ee1-b0e1-ce640e1f85e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d3029e-7d4c-4477-ac6b-62e28bde6ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8faaa865-857b-4261-b126-433898dcbc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba943c8b-7122-4dc6-968c-20d286fc182c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
