Adding network gradients and curvature and speed limit specifications

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -11,12 +11,26 @@
     "OmniCentro Specifications\n",
     "===============================================================================\n",
     "\n",
-    "-------------------------------------------------------------------------------\n",
+    "-------------------------------------------------------------------------------\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da9c8c7-5b5b-4ed9-876e-166b2d6d2ccd",
+   "metadata": {},
+   "source": [
     "\n",
     "Background stories and technical specifications\n",
     "for my upcoming fictional Cities: Skylines 2 city *OmniCentro*.\n",
     "\n",
-    "PDX Mod Link: ***TBD***\n",
+    "PDX Mod Link: ***TBD***\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8afd816a-e81c-4d89-b3f2-b17524ce7860",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "Malgarantio  \n",
@@ -33,7 +47,7 @@
     "This work © 2024 by \\_HomeOnMars\\_ is licensed under CC BY-NC-SA 4.0.\n",
     "To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-sa/4.0/\n",
     "\n",
-    "-------------------------------------------------------------------------------"
+    "-------------------------------------------------------------------------------\n"
    ]
   },
   {
@@ -50,16 +64,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e9cef7-e12a-47f2-9973-f788ac5527c0",
+   "id": "80668e1b-0c07-4bb3-b77e-4c66979ac8c4",
    "metadata": {},
    "source": [
     "### Bulletin\n",
     "\n",
-    "-------------------------------------------------------------------------------\n",
+    "-------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95101ac5-26ab-4bce-95b4-d01f7101b897",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "#### Summary\n",
-    "\n",
+    "#### Summary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90e9cef7-e12a-47f2-9973-f788ac5527c0",
+   "metadata": {},
+   "source": [
     "(Again, everything here is fictional.)\n",
     "\n",
     "| Settings          |  Acronym | Name                |\n",
@@ -74,10 +101,24 @@
     "| City Background   | Planned New Capital |\n",
     "| Official Language | Esperanto (transitioning from English in the next 20 years) |\n",
     "| Country Leader    | Reĝino Serena de Omnijo |\n",
-    "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suvereno |\n",
+    "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suvereno |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e2096cb-3a26-4dfa-8ed9-40bc363953b6",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "#### Government Structure (Part)\n",
+    "#### Government Structure (Part)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe024417-dc75-4894-8f82-5a027702e403",
+   "metadata": {},
+   "source": [
     "\n",
     "| Departments                  |  Acronym | Name |\n",
     "| ---------------------------- | :------: | ---- |\n",
@@ -92,10 +133,24 @@
     "| ---------------------------- | :------: | ---- |\n",
     "| Office of Finance            | OCOF | Omnija Centra Oficejo de Fisko |\n",
     "| Office of Foreign Affairs    | OCOE | Omnija Centra Oficejo de Eksteraj Aferoj |\n",
-    "| Office of Home    Affairs    | OCOI | Omnija Centra Oficejo de Internaj Aferoj |\n",
+    "| Office of Home    Affairs    | OCOI | Omnija Centra Oficejo de Internaj Aferoj |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82560901-6aca-498f-a06b-77aede34fc51",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "#### Single letter abbreviations\n",
+    "#### Single letter abbreviations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "597c7e6b-86a5-4ee0-8d5f-a512c22304da",
+   "metadata": {},
+   "source": [
     "\n",
     "| Acronym | Esperanto     | English  |\n",
     "| :-----: | ------------- | -------- |\n",
@@ -124,16 +179,149 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c1b53a-120e-4065-9324-b14fc63e822f",
+   "id": "62423738-ce1c-4ace-8b67-4668b1192cc9",
+   "metadata": {},
+   "source": [
+    "### Networks\n",
+    "\n",
+    "-------------------------------------------------------------------------------\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04c822e6-3b37-4fd2-9e42-11086cd52c3f",
+   "metadata": {},
+   "source": [
+    "#### Roads\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4e42bc-a53a-43e3-9de8-d154691114a0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "TBD.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e5e9da5-64bd-450b-a48e-60afe2b46d01",
+   "metadata": {},
+   "source": [
+    "#### Rails\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dd196cb-fb1d-44d6-8cf5-abf47c90968c",
+   "metadata": {},
+   "source": [
+    "- Freight and old Passenger Railways\n",
+    "  - Gradient  limit:\n",
+    "    - [Recommended] $ \\leq 1.5\\% $.\n",
+    "    - [Mandatory] $ < 3.5\\% $ (liberties have been taken due to steep terrain in the map- also it's more fun).\n",
+    "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
+    "  - Curvature limit:\n",
+    "    - [Recommended] $ \\geq 640 \\mathrm{m} $.\n",
+    "      - This translates to a curve of (512m, 512m, $ \\geq 102.7\\deg $).\n",
+    "      - ... or a curve of (256m, 256m, $ \\geq 136.4\\deg $).\n",
+    "      - ... or a curve of (128m, 128m, $ \\geq 157.4\\deg $).\n",
+    "      - ... or a curve of (640m, 640m, $  =   90.0\\deg $).\n",
+    "      - Supporting $ v_\\mathrm{max} \\simeq 120 \\mathrm{km/h} $.\n",
+    "      - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
+    "    - [Mandatory] $ \\geq 160 \\mathrm{m} $.\n",
+    "      - This translates to a curve of (512m, 512m, $ \\geq 34.8\\deg $).\n",
+    "      - ... or a curve of (256m, 256m, $ \\geq 64.1\\deg $).\n",
+    "      - ... or a curve of (128m, 128m, $ \\geq 102.7\\deg $).\n",
+    "      - ... or a curve of ( 64m,  64m, $ \\geq 136.4\\deg $).\n",
+    "      - ... or a curve of (160m, 160m, $  =   90.0\\deg $).\n",
+    "      - Supporting $ v_\\mathrm{max} \\simeq 40 \\mathrm{km/h} $.\n",
+    "      - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
+    "        (Lithgow Zig Zag)\n",
+    "  - Speed limit: [TBD]\n",
+    "- High Speed Railways\n",
+    "  - Gradient  limit:\n",
+    "    - [Recommended] $ \\leq 3.5\\% $;\n",
+    "    - [Mandatory] $ < 4\\% $.\n",
+    "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
+    "  - Curvature limit:\n",
+    "    - [Recommended] $ \\geq 4000 \\mathrm{m} $.\n",
+    "      - This translates to a curve of (512m, 512m, $ \\geq 165.5\\deg $).\n",
+    "      - Supporting $ v_\\mathrm{max} \\simeq 300 \\mathrm{km/h} $.\n",
+    "    - [Mandatory] $ \\geq 3500 \\mathrm{m} $ (Except near stations).\n",
+    "      - This translates to a curve of (512m, 512m, $ \\geq 163.4\\deg $).\n",
+    "      <!--- Angle equation: 2*np.atan(3500/512)/np.pi*180 --->\n",
+    "      - Supporting $ v_\\mathrm{max} \\simeq 250 \\mathrm{km/h} $.\n",
+    "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
+    "  - Speed limit: $ 300 \\mathrm{km/h} $\n",
+    "- Metro / Subway / Passenger Railways\n",
+    "  - Gradient  limit:\n",
+    "    - [Recommended] $ \\leq 5.5\\% $.\n",
+    "    - [Mandatory] $ < 7\\% $.\n",
+    "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
+    "      (Höllentalbahn (Black Forest), Germany; Bernina Railway, Switzerland.)\n",
+    "  - Curvature limit:\n",
+    "    - TBD.\n",
+    "  - Speed limit: $ 100 \\mathrm{km/h} $\n",
+    "- Trams\n",
+    "  - Gradient  limit:\n",
+    "    - [Recommended] $ \\leq 10\\% $.\n",
+    "    - [Mandatory] $ < 13.5\\% $.\n",
+    "  - Speed limit: $ 90 \\mathrm{km/h} $\n",
+    "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#Examples\n",
+    "    (Sheffield Supertram, Sheffield, England; Lisbon Tramways, Portugal.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4c9f4914-d660-406c-bf5c-f650834d3886",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(136.39718102729637)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "2*np.atan(160/64) / np.pi * 180"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13c49f2d-96cd-4558-a8bd-adefd49a430f",
    "metadata": {},
    "source": [
     "### Trees\n",
     "\n",
     "-------------------------------------------------------------------------------\n",
     "\n",
-    "\n",
-    "#### Brushes Configuration\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da9ae158-fa44-4f3b-9523-d1195afcdb20",
+   "metadata": {},
+   "source": [
+    "#### Brushes Configuration\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b24e4eee-35e8-427c-b0a6-e16126855085",
+   "metadata": {},
+   "source": [
     "- Brush W-D: Altitude  100m to  600m\n",
     "  - Briches\n",
     "  - etc.\n",
@@ -148,11 +336,27 @@
     "  - Pines\n",
     "  - Spruces\n",
     "- Brush N/A: Very steep terrain\n",
-    "  - Spruces\n",
+    "  - Spruces\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d838e7e-980e-4a21-a3ea-339b6b2463f6",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "#### Species\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07c1b53a-120e-4065-9324-b14fc63e822f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
     "- Briches\n",
     "  - Esperanto Name: Betulo\n",
     "  - Altitude:  600m to 1400m\n",
@@ -164,12 +368,25 @@
     "- Spruces\n",
     "  - Esperanto Name: Piceo\n",
     "  - Altitude: 2000m to 3500m\n",
-    "  - Source: https://csfs.colostate.edu/colorado-trees/colorados-major-tree-species/\n",
+    "  - Source: https://csfs.colostate.edu/colorado-trees/colorados-major-tree-species/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcee3c63-83f8-45cc-acb2-50bbe41cf847",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "#### See Also\n",
-    "\n",
-    "- https://en.wikipedia.org/wiki/Tree_line#Tree_species_near_tree_line\n"
+    "#### See Also\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebaa0063-71e4-427e-8b05-324445bb15bf",
+   "metadata": {},
+   "source": [
+    "- https://en.wikipedia.org/wiki/Tree_line#Tree_species_near_tree_line"
    ]
   },
   {
