--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -261,11 +261,11 @@
     "  - Gradient  limit:\n",
     "    - [Recommended] $ \\leq 5.5\\% $.\n",
     "    - [Mandatory] $ < 7\\% $.\n",
-    "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
-    "      (Höllentalbahn (Black Forest), Germany; Bernina Railway, Switzerland.)\n",
     "  - Curvature limit:\n",
     "    - TBD.\n",
     "  - Speed limit: $ 100 \\mathrm{km/h} $\n",
+    "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
+    "    (Höllentalbahn (Black Forest), Germany; Bernina Railway, Switzerland.)\n",
     "- Trams\n",
     "  - Gradient  limit:\n",
     "    - [Recommended] $ \\leq 10\\% $.\n",
@@ -453,11 +453,25 @@
     "Project Omnijo\n",
     "===============================================================================\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18999008-246a-43b3-a04a-e55b2d4d2856",
+   "metadata": {},
+   "source": [
     "\n",
     "Documents for my upcoming Cities: Skylines 2 cities,\n",
     "in the fictional country *Regno de Omnijo* (Kingdom of Omnijo)\n",
-    "created by my imagination.\n",
-    "\n",
+    "created by my imagination.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ef641b-423b-4315-abee-8d2011a1ce16",
+   "metadata": {},
+   "source": [
     "\n",
     "Disclaimer\n",
     "-------------------------------------------------------------------------------\n",
@@ -472,80 +486,8 @@
     "This work © 2024 by \\_HomeOnMars\\_ is licensed under CC BY-NC-SA 4.0.\n",
     "To view a copy of this license, visit https://creativecommons.org/licenses/by-nc-sa/4.0/\n",
     "\n",
-    "-------------------------------------------------------------------------------"
+    "-------------------------------------------------------------------------------\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4613b0b-1e41-4a42-9664-bf8f6b894ed5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b56e26cb-8228-47f4-8498-67e1e7a2bd64",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3462b37-1ac9-4c1b-a159-4814d46c59dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae65327e-7357-4516-a04f-440e52b9b952",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de8b0227-83c8-4d61-a157-9ee04924117f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a51577ad-babf-4ee1-b0e1-ce640e1f85e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97d3029e-7d4c-4477-ac6b-62e28bde6ba9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8faaa865-857b-4261-b126-433898dcbc7d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba943c8b-7122-4dc6-968c-20d286fc182c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
