Added train length limit.

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -240,6 +240,7 @@
     "      - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "        (Lithgow Zig Zag)\n",
     "  - Speed limit: [TBD]\n",
+    "  - Length limit (for track intersections): 500m (25 cars with 20m per car)\n",
     "- High Speed Railways\n",
     "  - Gradient  limit:\n",
     "    - [Recommended] $ \\leq 3.5\\% $;\n",
