--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -101,7 +101,7 @@
     "| City Background   | Planned New Capital |\n",
     "| Official Language | Esperanto (transitioning from English in the next 20 years) |\n",
     "| Country Leader    | Reĝino Serena de Omnijo |\n",
-    "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suvereno |\n"
+    "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suverenino |\n"
    ]
   },
   {
@@ -202,8 +202,37 @@
    "id": "6a4e42bc-a53a-43e3-9de8-d154691114a0",
    "metadata": {},
    "source": [
-    "\n",
-    "TBD.\n"
+    "- Highways\n",
+    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "    \n",
+    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
+    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | ----- |\n",
+    "    | Recommended |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | |\n",
+    "    | Soft Limit  |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | |\n",
+    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | For ramps / In mountains |\n",
+    "    | Mandatory   |  $ \\leq 10  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | For ramps / In mountains |\n",
+    "    \n",
+    "    - Source: [2024-08-17] (US) https://en.wikipedia.org/wiki/Grade_(slope)#Roads\n",
+    "    - Source: [2024-08-17] (EU) https://en.wikipedia.org/wiki/International_E-road_network#Road_design_standards\n",
+    "      - According to source,\n",
+    "        $ R \\geq 1000 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq 140 \\mathrm{km/h} $; and\n",
+    "        $ R \\geq  120 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq  60 \\mathrm{km/h} $.\n",
+    "      - Assuming the curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
+    "        i.e. $ R \\approx v_\\mathrm{max}^2 / (30 \\mathrm{mh/km}) $ for lower  limit,\n",
+    "        and  $ R \\approx v_\\mathrm{max}^2 / (20 \\mathrm{mh/km}) $ for higher limit.\n",
+    "- Arterial / Collector / Local Roads\n",
+    "  - Gradient  limit:\n",
+    "    (Arbitrarily set to:)\n",
+    "    \n",
+    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
+    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | ----- |\n",
+    "    | Recommended |  $ \\leq 10  \\% $  |  -                         |  $ \\simeq  60 \\mathrm{km/h} $  | Arterial |\n",
+    "    | Mandatory   |  $ \\leq 36  \\% $  |  -                         |  $ \\simeq  25 \\mathrm{km/h} $  | Local roads |\n",
+    "    \n",
+    "- Bike paths\n",
+    "  - TBD\n",
+    "- Ped  paths\n",
+    "  - TBD "
    ]
   },
   {
@@ -220,55 +249,51 @@
    "metadata": {},
    "source": [
     "- Freight and old Passenger Railways\n",
-    "  - Gradient  limit:\n",
-    "    - [Recommended] $ \\leq 1.5\\% $.\n",
-    "    - [Mandatory] $ < 3.5\\% $ (liberties have been taken due to steep terrain in the map- also it's more fun).\n",
-    "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
-    "  - Curvature limit:\n",
-    "    - [Recommended] $ \\geq 640 \\mathrm{m} $.\n",
-    "      - This translates to a curve of (512m, 512m, $ \\geq 103\\deg $).\n",
-    "      - ... or a curve of (256m, 256m, $ \\geq 137\\deg $).\n",
-    "      - ... or a curve of (128m, 128m, $ \\geq 158\\deg $).\n",
-    "      - ... or a curve of (640m, 640m, $  =    90\\deg $).\n",
-    "      - Supporting $ v_\\mathrm{max} \\simeq 120 \\mathrm{km/h} $.\n",
-    "      - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
-    "    - [Mandatory] $ \\geq 160 \\mathrm{m} $.\n",
-    "      - This translates to a curve of (128m, 128m, $ \\geq 103\\deg $).\n",
-    "      - ... or a curve of ( 64m,  64m, $ \\geq 137\\deg $).\n",
-    "      - ... or a curve of (160m, 160m, $  =   90\\deg $).\n",
-    "      - Supporting $ v_\\mathrm{max} \\simeq 40 \\mathrm{km/h} $.\n",
-    "      - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
+    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "    - **[Recommended]** $ \\;\\; s \\leq 1.5\\%, \\;\\; R \\geq 640 \\mathrm{m}, \\;\\; $ with $ \\;\\; v_\\mathrm{max} \\simeq 120 \\mathrm{km/h} $.\n",
+    "      - This $ R $ translates to a curve of (512m, 512m, $ \\theta \\geq 103\\deg $).\n",
+    "      - ... or a curve of (256m, 256m, $ \\theta \\geq 137\\deg $).\n",
+    "      - ... or a curve of (128m, 128m, $ \\theta \\geq 158\\deg $).\n",
+    "      - ... or a curve of (640m, 640m, $ \\theta  =    90\\deg $).\n",
+    "      - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
+    "    - **[ Mandatory ]** $ \\;\\; s < 3.5\\%, \\;\\; R \\geq 160 \\mathrm{m}, \\;\\; $ with $ \\;\\; v_\\mathrm{max} \\simeq 40 \\mathrm{km/h} $.\n",
+    "      - This $ R $ translates to a curve of (128m, 128m, $ \\theta \\geq 103\\deg $).\n",
+    "      - ... or a curve of ( 64m,  64m, $ \\theta \\geq 137\\deg $).\n",
+    "      - ... or a curve of (160m, 160m, $ \\theta  =   90\\deg $).\n",
+    "      - Liberties have been taken for $s$ due to steep terrain in the map- also it's more fun.\n",
+    "      - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "        (Lithgow Zig Zag)\n",
+    "    - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
     "  - Speed limit: [TBD]\n",
-    "  - Length limit (for track intersections): 500m (25 cars with 20m per car)\n",
+    "  - Length limit (for track intersections): $ > 500\\mathrm{m} $ (25 cars with 20m per car)\n",
     "- High Speed Railways\n",
-    "  - Gradient  limit:\n",
-    "    - [Recommended] $ \\leq 3.5\\% $;\n",
-    "    - [Mandatory] $ < 4\\% $.\n",
+    "  - Gradient $ s $ limit:\n",
+    "    - [Recommended] $ \\;\\; s \\leq 3.5\\% $;\n",
+    "    - [ Mandatory ] $ \\;\\; s < 4\\% $.\n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
-    "  - Curvature limit:\n",
-    "    - [Recommended] $ \\geq 4000 \\mathrm{m} $.\n",
-    "      - This translates to a curve of (512m, 512m, $ \\geq 166\\deg $).\n",
+    "  - Curvature $ R $  limit:\n",
+    "    - [Recommended] $ \\;\\; R \\geq 4000 \\mathrm{m} $.\n",
+    "      - This translates to a curve of (512m, 512m, $ \\theta \\geq 166\\deg $).\n",
     "      - Supporting $ v_\\mathrm{max} \\simeq 300 \\mathrm{km/h} $.\n",
-    "    - [Mandatory] $ \\geq 3500 \\mathrm{m} $ (Except near stations).\n",
-    "      - This translates to a curve of (512m, 512m, $ \\geq 164\\deg $).\n",
+    "    - [ Mandatory ] $ \\;\\; R \\geq 3500 \\mathrm{m} $ (Except near stations).\n",
+    "      - This translates to a curve of (512m, 512m, $ \\theta \\geq 164\\deg $).\n",
     "      <!--- Angle equation: 2*np.atan(3500/512)/np.pi*180 --->\n",
     "      - Supporting $ v_\\mathrm{max} \\simeq 250 \\mathrm{km/h} $.\n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "  - Speed limit: $ 300 \\mathrm{km/h} $\n",
     "- Metro / Subway / Passenger Railways\n",
-    "  - Gradient  limit:\n",
-    "    - [Recommended] $ \\leq 5.5\\% $.\n",
-    "    - [Mandatory] $ < 7\\% $.\n",
-    "  - Curvature limit:\n",
+    "  - Gradient $ s $ limit:\n",
+    "    - [Recommended] $ \\;\\; s \\leq 5.5\\% $.\n",
+    "    - [ Mandatory ] $ \\;\\; s < 7\\% $.\n",
+    "  - Curvature $ R $ limit:\n",
     "    - TBD.\n",
     "  - Speed limit: $ 100 \\mathrm{km/h} $\n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
     "    (Höllentalbahn (Black Forest), Germany; Bernina Railway, Switzerland.)\n",
     "- Trams\n",
-    "  - Gradient  limit:\n",
-    "    - [Recommended] $ \\leq 10\\% $.\n",
-    "    - [Mandatory] $ < 13.5\\% $.\n",
+    "  - Gradient $ s $ limit:\n",
+    "    - [Recommended] $ \\;\\; s \\leq 10\\% $.\n",
+    "    - [ Mandatory ] $ \\;\\; s < 13.5\\% $.\n",
     "  - Speed limit: $ 90 \\mathrm{km/h} $\n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#Examples\n",
     "    (Sheffield Supertram, Sheffield, England; Lisbon Tramways, Portugal.)"
@@ -283,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(136.39718102729637)"
+       "np.float64(151.92751306414706)"
       ]
      },
      "execution_count": 1,
@@ -293,7 +318,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "2*np.atan(160/64) / np.pi * 180"
+    "2*np.atan(320/80) / np.pi * 180"
    ]
   },
   {
