--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -250,75 +250,70 @@
    "source": [
     "- Freight and old Passenger Railways\n",
     "  - Gradient $ s $ and Curvature $ R $ limit:\n",
-    "    - **[Recommended]** $ \\;\\; s \\leq 1.5\\%, \\;\\; R \\geq 640 \\mathrm{m}, \\;\\; $ with $ \\;\\; v_\\mathrm{max} \\simeq 120 \\mathrm{km/h} $.\n",
-    "      - This $ R $ translates to a curve of (512m, 512m, $ \\theta \\geq 103\\deg $).\n",
-    "      - ... or a curve of (256m, 256m, $ \\theta \\geq 137\\deg $).\n",
-    "      - ... or a curve of (128m, 128m, $ \\theta \\geq 158\\deg $).\n",
-    "      - ... or a curve of (640m, 640m, $ \\theta  =    90\\deg $).\n",
-    "      - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
-    "    - **[ Mandatory ]** $ \\;\\; s < 3.5\\%, \\;\\; R \\geq 160 \\mathrm{m}, \\;\\; $ with $ \\;\\; v_\\mathrm{max} \\simeq 40 \\mathrm{km/h} $.\n",
-    "      - This $ R $ translates to a curve of (128m, 128m, $ \\theta \\geq 103\\deg $).\n",
-    "      - ... or a curve of ( 64m,  64m, $ \\theta \\geq 137\\deg $).\n",
-    "      - ... or a curve of (160m, 160m, $ \\theta  =   90\\deg $).\n",
-    "      - Liberties have been taken for $s$ due to steep terrain in the map- also it's more fun.\n",
-    "      - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
-    "        (Lithgow Zig Zag)\n",
+    "    \n",
+    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
+    "    | Recommended |  $ \\leq  1.5\\% $  |  $ \\geq  640 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | $ \\geq 158\\degree $ | $ \\geq 169\\degree $ | |\n",
+    "    | Mandatory   |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
+    "    \n",
+    "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phases curve of $d$ - $d$ in game.\n",
+    "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
+    "      <!--- Angle equation: 2*np.atan(3500/512)/np.pi*180 --->\n",
+    "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
+    "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii (Lithgow Zig Zag)\n",
     "    - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
-    "  - Speed limit: [TBD]\n",
+    "    - Note: Liberties have been taken for the mandatory limit of $s$ due to steep terrain in the map. Also steeper is more fun.\n",
     "  - Length limit (for track intersections): $ > 500\\mathrm{m} $ (25 cars with 20m per car)\n",
     "- High Speed Railways\n",
-    "  - Gradient $ s $ limit:\n",
-    "    - [Recommended] $ \\;\\; s \\leq 3.5\\% $;\n",
-    "    - [ Mandatory ] $ \\;\\; s < 4\\% $.\n",
+    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
+    "    \n",
+    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
+    "    | Recommended |  $ \\leq  3.5\\% $  |  $ \\geq 4000 \\mathrm{m} $  |  $ \\simeq 300 \\mathrm{km/h} $  | $ \\geq 166\\degree $ | $ \\geq 173\\degree $ | $ \\geq 177\\degree $ | $ \\geq 179\\degree $ | |\n",
+    "    | Mandatory   |  $ \\leq  4  \\% $  |  $ \\geq 3500 \\mathrm{m} $  |  $ \\simeq 250 \\mathrm{km/h} $  | $ \\geq 164\\degree $ | $ \\geq 172\\degree $ | $ \\geq 176\\degree $ | $ \\geq 178\\degree $ | |\n",
+    "    \n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
-    "  - Curvature $ R $  limit:\n",
-    "    - [Recommended] $ \\;\\; R \\geq 4000 \\mathrm{m} $.\n",
-    "      - This translates to a curve of (512m, 512m, $ \\theta \\geq 166\\deg $).\n",
-    "      - Supporting $ v_\\mathrm{max} \\simeq 300 \\mathrm{km/h} $.\n",
-    "    - [ Mandatory ] $ \\;\\; R \\geq 3500 \\mathrm{m} $ (Except near stations).\n",
-    "      - This translates to a curve of (512m, 512m, $ \\theta \\geq 164\\deg $).\n",
-    "      <!--- Angle equation: 2*np.atan(3500/512)/np.pi*180 --->\n",
-    "      - Supporting $ v_\\mathrm{max} \\simeq 250 \\mathrm{km/h} $.\n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
-    "  - Speed limit: $ 300 \\mathrm{km/h} $\n",
     "- Metro / Subway / Passenger Railways\n",
     "  - Gradient $ s $ limit:\n",
-    "    - [Recommended] $ \\;\\; s \\leq 5.5\\% $.\n",
-    "    - [ Mandatory ] $ \\;\\; s < 7\\% $.\n",
-    "  - Curvature $ R $ limit:\n",
-    "    - TBD.\n",
-    "  - Speed limit: $ 100 \\mathrm{km/h} $\n",
+    "    \n",
+    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
+    "    | Recommended |  $ \\leq  5.5\\% $  |  TBD                       |  $ \\simeq 100 \\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Höllentalbahn (Black Forest), Germany |\n",
+    "    | Mandatory   |  $ \\leq  7  \\% $  |  TBD                       |  $ \\simeq 100 \\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Bernina Railway, Switzerland |\n",
+    "    \n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
-    "    (Höllentalbahn (Black Forest), Germany; Bernina Railway, Switzerland.)\n",
     "- Trams\n",
     "  - Gradient $ s $ limit:\n",
-    "    - [Recommended] $ \\;\\; s \\leq 10\\% $.\n",
-    "    - [ Mandatory ] $ \\;\\; s < 13.5\\% $.\n",
-    "  - Speed limit: $ 90 \\mathrm{km/h} $\n",
-    "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#Examples\n",
-    "    (Sheffield Supertram, Sheffield, England; Lisbon Tramways, Portugal.)"
+    "    \n",
+    "    |             | Gradient $ s $    | Speed limit $ v_\\mathrm{max} $ | Real world examples |\n",
+    "    | ----------- | :---------------: | :----------------------------: | ------------------- |\n",
+    "    | Recommended |  $ \\leq 10  \\% $  |  $ \\simeq  90 \\mathrm{km/h} $  | Sheffield Supertram, Sheffield |\n",
+    "    | Mandatory   |  $ \\leq 13.5\\% $  |  $ \\simeq  70?\\mathrm{km/h} $  | Lisbon Tramways, Portugal |\n",
+    "    \n",
+    "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#Examples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "4c9f4914-d660-406c-bf5c-f650834d3886",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(151.92751306414706)"
+       "np.float64(178.16669148722943)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "2*np.atan(320/80) / np.pi * 180"
+    "2*np.atan(4000/64) / np.pi * 180"
    ]
   },
   {
