--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -258,7 +258,15 @@
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phases curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
-    "      <!--- Angle equation: 2*np.atan(3500/512)/np.pi*180 --->\n",
+    "    - Angle $ \\theta_{d} $ equation:\n",
+    "      $ \\theta_{d} = 2 \\tan^{-1}{\\frac{R}{d}} $\n",
+    "      ```\n",
+    "          # python code\n",
+    "          import numpy as np\n",
+    "          # remember to translate radian to degree\n",
+    "          theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
+    "          theta_deg(R=4000, d=512)\n",
+    "      ```\n",
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii (Lithgow Zig Zag)\n",
     "    - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
@@ -279,7 +287,7 @@
     "    \n",
     "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
-    "    | Recommended |  $ \\leq  5.5\\% $  |  TBD                       |  $ \\simeq 100 \\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Höllentalbahn (Black Forest), Germany |\n",
+    "    | Recommended |  $ \\leq  5.5\\% $  |  TBD                       |  $ \\simeq 120?\\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Höllentalbahn (Black Forest), Germany |\n",
     "    | Mandatory   |  $ \\leq  7  \\% $  |  TBD                       |  $ \\simeq 100 \\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Bernina Railway, Switzerland |\n",
     "    \n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
@@ -296,24 +304,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "4c9f4914-d660-406c-bf5c-f650834d3886",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(178.16669148722943)"
+       "np.float64(166.0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "2*np.atan(4000/64) / np.pi * 180"
+    "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
+    "theta_deg(R=4000, d=512)"
    ]
   },
   {
@@ -430,17 +439,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "78941f55-85a0-4f78-880b-58494eda11b7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
-     ]
-    },
     {
      "data": {
       "text/latex": [
@@ -450,7 +452,7 @@
        "<Quantity 3505.2 m>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
