--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -263,7 +263,7 @@
     "      ```\n",
     "          # python code\n",
     "          import numpy as np\n",
-    "          # remember to translate radian to degree\n",
+    "          # remember to translate radian into degree\n",
     "          theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
     "          theta_deg(R=4000, d=512)\n",
     "      ```\n",
@@ -287,10 +287,11 @@
     "    \n",
     "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
-    "    | Recommended |  $ \\leq  5.5\\% $  |  TBD                       |  $ \\simeq 120?\\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Höllentalbahn (Black Forest), Germany |\n",
-    "    | Mandatory   |  $ \\leq  7  \\% $  |  TBD                       |  $ \\simeq 100 \\mathrm{km/h} $  | TBD                 | TBD                 | TBD                  | TBD                 | Bernina Railway, Switzerland |\n",
+    "    | Recommended |  $ \\leq  5.5\\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | -                   | -                   | $ \\geq   90\\degree $  | $ \\geq 127\\degree $ | Höllentalbahn (Black Forest), Germany;<br>Bay Area Rapid Transit, United States. |\n",
+    "    | Mandatory   |  $ \\leq  7  \\% $  |  $ \\geq   64 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq  90\\degree $ | Bernina Railway, Switzerland;<br>Central line, London Underground, United Kingdom. |\n",
     "    \n",
     "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
+    "  - Source: [2024-08-17] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "- Trams\n",
     "  - Gradient $ s $ limit:\n",
     "    \n",
@@ -311,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(166.0)"
+       "np.float64(127.0)"
       ]
      },
      "execution_count": 1,
@@ -322,7 +323,7 @@
    "source": [
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
-    "theta_deg(R=4000, d=512)"
+    "theta_deg(R=128, d=64)"
    ]
   },
   {
