--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -64,6 +64,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df830d60-cbc5-41b4-ac95-b18fbe8284fb",
+   "metadata": {},
+   "source": [
+    "***Again, everything here is fictional.***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "80668e1b-0c07-4bb3-b77e-4c66979ac8c4",
    "metadata": {},
    "source": [
@@ -87,7 +95,6 @@
    "id": "90e9cef7-e12a-47f2-9973-f788ac5527c0",
    "metadata": {},
    "source": [
-    "(Again, everything here is fictional.)\n",
     "\n",
     "| Settings          |  Acronym | Name                |\n",
     "| :---------------- | :------: | :-----------------: |\n",
@@ -122,12 +129,12 @@
     "\n",
     "| Departments                  |  Acronym | Name |\n",
     "| ---------------------------- | :------: | ---- |\n",
-    "| Department of Defence        | OCFD | OmniCentra Fako de Defendo |\n",
-    "| Department of Education      | OCFE | OmniCentra Fako de Edukado |\n",
-    "| Department of Fire and Rescue| OCFF | OmniCentra Fako de Fajro kaj Savo |\n",
-    "| Department of Infrastructure | OCFI | OmniCentra Fako de Infrastrukturo |\n",
-    "| Department of Police         | OCFP | OmniCentra Fako de Polico  |\n",
-    "| Department of Health         | OCFS | OmniCentra Fako de Sano    |\n",
+    "| Department of Defence        | OCFD | Omnija Centra Fako de Defendo |\n",
+    "| Department of Education      | OCFE | Omnija Centra Fako de Edukado |\n",
+    "| Department of Fire and Rescue| OCFF | Omnija Centra Fako de Fajro kaj Savo |\n",
+    "| Department of Infrastructure | OCFI | Omnija Centra Fako de Infrastrukturo |\n",
+    "| Department of Police         | OCFP | Omnija Centra Fako de Polico  |\n",
+    "| Department of Health         | OCFS | Omnija Centra Fako de Sano    |\n",
     "\n",
     "| Offices                      |  Acronym | Name |\n",
     "| ---------------------------- | :------: | ---- |\n",
@@ -179,6 +186,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f3d4f6c-9b73-4c07-ab29-75da051c1801",
+   "metadata": {},
+   "source": [
+    "***Warning:\n",
+    "Information here is gathered from the internet for gameplay purposes,\n",
+    "so not much effort has been spent on ensuring its accuracy.\n",
+    "Some maybe incorrect or outdated.\n",
+    "Some are just chosen arbitrarily.\n",
+    "Use at your own risk.***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "62423738-ce1c-4ace-8b67-4668b1192cc9",
    "metadata": {},
    "source": [
@@ -207,14 +227,14 @@
     "    \n",
     "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | ----- |\n",
-    "    | Recommended |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | |\n",
-    "    | Soft Limit  |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | |\n",
+    "    | Soft Limit  |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | |\n",
+    "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | |\n",
     "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | For ramps / In mountains |\n",
     "    | Mandatory   |  $ \\leq 10  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | For ramps / In mountains |\n",
     "    \n",
     "    - Source: [2024-08-17] (US) https://en.wikipedia.org/wiki/Grade_(slope)#Roads\n",
     "    - Source: [2024-08-17] (EU) https://en.wikipedia.org/wiki/International_E-road_network#Road_design_standards\n",
-    "      - According to source,\n",
+    "      - According to the source,\n",
     "        $ R \\geq 1000 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq 140 \\mathrm{km/h} $; and\n",
     "        $ R \\geq  120 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq  60 \\mathrm{km/h} $.\n",
     "      - Assuming the curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
@@ -263,8 +283,9 @@
     "      ```\n",
     "          # python code\n",
     "          import numpy as np\n",
-    "          # remember to translate radian into degree\n",
+    "          # Remember to translate radian into degree\n",
     "          theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
+    "          # Example\n",
     "          theta_deg(R=4000, d=512)\n",
     "      ```\n",
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
@@ -283,15 +304,15 @@
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "- Metro / Subway / Passenger Railways\n",
-    "  - Gradient $ s $ limit:\n",
+    "  - Gradient $ s $ and Curvature $ R $ limit:\n",
     "    \n",
     "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
-    "    | Recommended |  $ \\leq  5.5\\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | -                   | -                   | $ \\geq   90\\degree $  | $ \\geq 127\\degree $ | Höllentalbahn (Black Forest), Germany;<br>Bay Area Rapid Transit, United States. |\n",
-    "    | Mandatory   |  $ \\leq  7  \\% $  |  $ \\geq   64 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq  90\\degree $ | Bernina Railway, Switzerland;<br>Central line, London Underground, United Kingdom. |\n",
+    "    | Recommended |  $ \\leq  5.5\\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | -                   | -                   | $ \\geq   90\\degree $  | $ \\geq 127\\degree $ | [$ s $] Höllentalbahn (Black Forest), Germany;<br>[$ R $] Bay Area Rapid Transit, United States. |\n",
+    "    | Mandatory   |  $ \\leq  7  \\% $  |  $ \\geq   64 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq  90\\degree $ | [$ s $] Bernina Railway, Switzerland;<br>[$ R $] Central line, London Underground, United Kingdom. |\n",
     "    \n",
-    "  - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
-    "  - Source: [2024-08-17] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
+    "  - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
+    "  - Source: [2024-08-17] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "- Trams\n",
     "  - Gradient $ s $ limit:\n",
     "    \n",
@@ -428,6 +449,22 @@
     "-------------------------------------------------------------------------------\n",
     "\n",
     "-------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e3cb1f4-2187-41fa-a878-720efab51a8f",
+   "metadata": {},
+   "source": [
+    "***Again, everything here is fictional.***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6222180b-a1d1-4b09-b2cd-3d4920afce15",
+   "metadata": {},
+   "source": [
+    "(Coming soon.)"
    ]
   },
   {
