--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -225,13 +225,15 @@
     "- Highways\n",
     "  - Gradient $ s $ and Curvature $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | Notes |\n",
-    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | ----- |\n",
-    "    | Soft Limit  |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | |\n",
-    "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | |\n",
-    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | For ramps / In mountains |\n",
-    "    | Mandatory   |  $ \\leq 10  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | For ramps / In mountains |\n",
+    "    |             | Gradient $ s $    | Curvature $ R $            | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Notes |\n",
+    "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ----- |\n",
+    "    | Soft Limit  |  $ \\leq  4  \\% $  |  $ \\geq  720 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 110\\degree $ | $ \\geq 141\\degree $ | $ \\geq 160\\degree $ | $ \\geq 170\\degree $ | |\n",
+    "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  400 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | $ \\geq 115\\degree $ | $ \\geq 145\\degree $ | $ \\geq 162\\degree $ | |\n",
+    "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  216 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 119\\degree $ | $ \\geq 147\\degree $ | For ramps / In mountains |\n",
+    "    | Mandatory   |  $ \\leq 10  \\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
     "    \n",
+    "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phases curve of $d$ - $d$ in game.\n",
+    "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and both radius being 512m and 512m.\n",
     "    - Source: [2024-08-17] (US) https://en.wikipedia.org/wiki/Grade_(slope)#Roads\n",
     "    - Source: [2024-08-17] (EU) https://en.wikipedia.org/wiki/International_E-road_network#Road_design_standards\n",
     "      - According to the source,\n",
@@ -286,7 +288,8 @@
     "          # Remember to translate radian into degree\n",
     "          theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
     "          # Example\n",
-    "          theta_deg(R=4000, d=512)\n",
+    "          print([(d, theta_deg(R=720, d=d)) for d in (512, 256, 128, 64)])\n",
+    "          print(theta_deg(R=4000, d=512))\n",
     "      ```\n",
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
     "    - Source: [2024-08-16] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii (Lithgow Zig Zag)\n",
@@ -333,7 +336,10 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(127.0)"
+       "[(512, np.float64(166.0)),\n",
+       " (256, np.float64(173.0)),\n",
+       " (128, np.float64(177.0)),\n",
+       " (64, np.float64(179.0))]"
       ]
      },
      "execution_count": 1,
@@ -344,7 +350,7 @@
    "source": [
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
-    "theta_deg(R=128, d=64)"
+    "[(d, theta_deg(R=4000, d=d)) for d in (512, 256, 128, 64)]"
    ]
   },
   {
