--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -334,12 +334,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(512, np.float64(166.0)), (256, np.float64(173.0)), (128, np.float64(177.0)), (64, np.float64(179.0))]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[(512, np.float64(166.0)),\n",
-       " (256, np.float64(173.0)),\n",
-       " (128, np.float64(177.0)),\n",
-       " (64, np.float64(179.0))]"
+       "np.float64(163.0)"
       ]
      },
      "execution_count": 1,
@@ -350,7 +354,8 @@
    "source": [
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
-    "[(d, theta_deg(R=4000, d=d)) for d in (512, 256, 128, 64)]"
+    "print([(d, theta_deg(R=4000, d=d)) for d in (512, 256, 128, 64)])\n",
+    "theta_deg(R=720, d=108)"
    ]
   },
   {
